--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="add_item">Add Item</string>
     <string name="product_id">Product ID</string>
 
+    <string name="type_product_id">Type Product ID</string>
+
     <string name="error_item_not_found_title">Not Found</string>
     <string name="error_item_not_found_message">No item was found matching the id \"%s\"</string>
 </resources>
